# RISCuit

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
crates/libc-riscv32/: Cargo.toml
crates/libc-riscv32/src/: elf.rs  errno.rs  futex.rs  lib.rs  mman.rs  syscalls.rs
crates/riscv-c-tables/: Cargo.toml
crates/riscv-c-tables/src/: lib.rs
crates/riscv-inst/: Cargo.toml  build.rs
crates/riscv-inst-codegen/: Cargo.toml
crates/riscv-inst-codegen/riscv-meta/: opcodes  operands
crates/riscv-inst-codegen/src/: bitspec.rs  isa.rs  lib.rs  lookup_tables.rs  main.rs  match.rs  opcode.rs
crates/riscv-inst-macros/: Cargo.toml
crates/riscv-inst-macros/src/: bits.rs  fields.rs  isa.rs  lib.rs
crates/riscv-inst/src/: lib.rs  lookup.rs  macros.rs  reg.rs  rv32.rs  rv64.rs  rv_c.rs  test.rs  traits.rs
crates/riscv-inst/src/codegen/: mod.rs  rv32.rs  rv32a.rs  rv32c.rs  rv32d.rs  rv32f.rs  rv32fc.rs  rv32i.rs  rv32m.rs  rv32q.rs  rv32s.rs  rv64.rs  rv64a.rs  rv64c.rs  rv64d.rs  rv64f.rs  rv64fc.rs  rv64i.rs  rv64m.rs  rv64q.rs  rv64s.rs
crates/riscv-kernel-linux/: Cargo.toml
crates/riscv-kernel-linux/src/: impls.rs  lib.rs
crates/riscv-vm/: Cargo.toml
crates/riscv-vm/src/: cpu.rs  elf.rs  error.rs  hart.rs  initialize.rs  lib.rs  machine.rs  memory.rs  syscall.rs
crates/riscv-vm/src/hart/: exec32.rs  exec64.rs  mod.rs
riscv/: Dockerfile  dockerrun.sh  riscv32imac-unknown-linux-gnu.json  riscv32imac-unknown-linux-musl.json
riscv/bench-guests/: README.md  alu.c  alu64.c  amo.c  branch.c  build.sh  call.c  common.h  exit0.c  mem.c  muldiv.c  syscall.c
riscv/dhrystone/: .gitignore  Makefile  dhry.h  dhry_1.c  dhry_2.c
riscv/guest_c/: alloc  alloc.c  inputs  inputs.c  main
riscv/guest_dylib/: Cargo.toml
riscv/guest_dylib/src/: lib.rs
riscv/guest_std/: Cargo.toml
riscv/guest_std/.cargo/: config  config.toml
riscv/guest_std/src/: main.rs
riscv/roundtrip/: Cargo.toml
riscv/roundtrip/src/: main.rs
riscv/test-env/: .gitignore  Dockerfile  build-clang.sh
riscv/toolchain/: Dockerfile  buildroot.config  riscv32imac-unknown-linux-musl.json  x86_64-unknown-linux-musl.json
test/guest/src/: main.rs
test/riscv-test-codegen/: Cargo.toml
test/riscv-test-codegen/src/: main.rs
test/riscv-test-macros/: Cargo.toml
test/riscv-test-macros/src/: lib.rs
test/riscv-tests/: .gitignore  Cargo.toml
test/riscv-tests/src/: lib.rs
vm/: Cargo.toml  ld-linux-riscv32-ilp32.so.1  libc.so.6  libgcc_s.so.1
vm/benches/: perf.rs  primes.rs  programs.rs
vm/examples/: bench_mips.rs  decode_diff.rs  density.rs  imix.rs  interleave.rs  trace_stages.rs
vm/src/: cpu.rs  elf.rs  error.rs  main.rs  memory.rs  memory64.rs  syscall.rs
vm/src/inst/: mod.rs  rv64.rs
