[package]
name = "derisc"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-vm.workspace = true
riscv-kernel-linux.workspace = true
clap = { version = "4.5.27", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
goblin = "0.9.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "primes"
harness = false
