[package]
name = "derisc"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-vm.workspace = true
riscv-kernel-linux.workspace = true
clap = { version = "4.5.27", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
goblin = "0.9.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "programs"
harness = false
