[package]
name = "guest_dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
# panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]

[workspace]
